Styling changes on the frontend

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" href="%PUBLIC_URL%/server.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#000000">
     <meta name="description" content="A web site dedicated to show some bank's info.">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
     <title>Banks Index</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+    <main id="root"></main>
+</body>
+
 </html>
